k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secureship-api
  namespace: secureship
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secureship-api
  template:
    metadata:
      labels:
        app: secureship-api
    spec:
      containers:
        - name: api
          image: secureship-api:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
